Adicionando mais conteúdo ao topo do site

--- a/style.css
+++ b/style.css
@@ -14,17 +14,45 @@ body {
     height: 100vh;
     /*font-family: 'Barlow', sans-serif;*/
     font-family: 'Fraunces', serif;
+    font-size: 18px;
 }
 
 header {
     background-image: url('images/mobile/image-header.jpg');
-    height: 100vh;
+    height: 90vh;
     background-position: center bottom;
     background-size: cover;
 }
 
-h1 {
+#menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+#logo-sunny {
+    padding: 32px 28px;
+}
+
+#icon-burguer {
+    font-size: 38px;
+    font-weight: normal;
+    color: white;
+    padding: 26px 28px;
+}
+
+header h1 {
     font-weight: 900;
+    letter-spacing: 12px;
+    text-align: center;
+    color: white;
+    margin-top: 70px;
+}
+
+#seta {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    top: 70px;
 }
 
 section {
