Adicionando feedback dos clientes

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 header {
     background-image: url('images/mobile/image-header.jpg');
-    height: 538px;
+    height: 548px;
     background-position: center bottom;
     background-size: cover;
 }
@@ -53,6 +53,9 @@ header h1 {
     justify-content: center;
     margin-top: 50px;
 }
+
+
+/* FIM DO HEADER */
 
 .conteudo {
     height: 470px;
@@ -96,3 +99,93 @@ header h1 {
     background-position: center center;
     background-size: cover;
 }
+
+#cereja {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    background-image: url(images/mobile/image-graphic-design.jpg);
+    background-size: cover;
+    height: 600px;    
+}
+
+#cereja h1 {
+    text-align: center;
+    font-weight: 900;
+    color: hsl(167, 40%, 24%);
+}
+
+#cereja p {
+    font-family: 'Barlow', sans-serif;
+    text-align: center;
+    margin: 30px auto 60px auto;
+    font-weight: 600;
+    width: 350px;
+    line-height: 2em;
+    color: hsl(167, 40%, 24%);
+}
+
+#laranja {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    background-image: url(images/mobile/image-photography.jpg);
+    background-size: cover;
+    height: 600px;
+}
+
+#laranja h1{
+    text-align: center;
+    font-weight: 900;
+    color: hsl(198, 62%, 26%);
+}
+
+#laranja p {
+    font-family: 'Barlow', sans-serif;
+    text-align: center;
+    margin: 30px auto 60px auto;
+    font-weight: 600;
+    width: 350px;
+    line-height: 2em;
+    color: hsl(198, 62%, 26%);
+}
+
+#article-clientes {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5em;
+}
+
+#article-clientes h4 {
+    text-align: center;
+    letter-spacing: 4px;
+    font-weight: 900;
+    color: hsl(210, 4%, 67%);
+    margin-top: 70px;
+}
+
+.testemunhas {
+    font-family: 'Barlow', sans-serif;
+    width: 350px;
+    padding: 0px 5px;                               /*SECTION TESTEMUNHAS*/
+    margin: auto;
+    text-align: center;
+    line-height: 2em;
+    color: hsl(232, 10%, 55%);
+    font-weight: 600
+}
+
+.fotos-clientes {
+    border-radius: 50%;
+    margin-top: 4em;
+    margin-bottom: 1em;
+}
+
+.nomes {
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    color:  hsl(212, 27%, 19%);
+    margin-top: 1em;
+}
+
+
