--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 header {
     background-image: url('images/mobile/image-header.jpg');
-    height: 548px;
+    height: 553px;
     background-position: center bottom;
     background-size: cover;
 }
@@ -34,10 +34,8 @@ header {
 }
 
 #icon-burguer {
-    font-size: 38px;
-    font-weight: normal;
     color: white;
-    padding: 26px 28px;
+    padding: 33px 28px;
 }
 
 header h1 {
@@ -106,7 +104,7 @@ header h1 {
     justify-content: end;
     background-image: url(images/mobile/image-graphic-design.jpg);
     background-size: cover;
-    height: 600px;    
+    height: 600px;
 }
 
 #cereja h1 {
@@ -150,6 +148,8 @@ header h1 {
     color: hsl(198, 62%, 26%);
 }
 
+/*AREA CLIENTES*/
+
 #article-clientes {
     display: flex;
     flex-direction: column;
@@ -188,4 +188,74 @@ header h1 {
     margin-top: 1em;
 }
 
+/*ÁREA IMAGENS*/
+
+#article-4-imagens {
+    display: flex;
+    flex-wrap: wrap;
+    height: 400px;
+}
+
+#milk {
+    background-image: url(images/mobile/image-gallery-milkbottles.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    width: 50%;
+    height: 50%;
+}
+
+#orange {
+    background-image: url(images/mobile/image-gallery-orange.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    height: 50%;
+}
+
+#sorvete {
+    background-image: url(images/mobile/image-gallery-cone.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    height: 50%;
+}
+
+#sugar {
+    background-image: url(images/mobile/image-gallery-sugar-cubes.jpg);    
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    height: 50%;
+}
+
+/*FIM ÁREA IMAGENS*/
+
+#footer {
+    background-color: #90D4C6;
+    text-align: center;
+    padding: 60px 0px;
+}
+
+
+#footer img {
+    
+}
+
+#footer-servicos {
+    font-family: 'Barlow', sans-serif;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    color: #519285;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+#footer-redes {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 4em;
+}
 
