--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
 
 header {
     background-image: url('images/mobile/image-header.jpg');
-    height: 553px;
+    height: 551px;
     background-position: center bottom;
     background-size: cover;
+    position: relative;
 }
 
 #menu {
@@ -35,7 +36,7 @@ header {
 
 #icon-burguer {
     color: white;
-    padding: 33px 28px;
+    padding: 33px 21px;
 }
 
 header h1 {
@@ -52,6 +53,38 @@ header h1 {
     margin-top: 50px;
 }
 
+#navigation {
+    background-color: white;
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    transform: translate(-50%);
+
+    padding: 20px 0px;
+    width: 335px;
+    height: 330px;
+    clip-path: polygon(0 7%, 93% 7%, 100% 0, 100% 100%, 79% 100%, 41% 100%, 0 100%);
+}
+
+#navigation ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+}
+
+
+#navigation ul li a {
+    font-family:  'Barlow', sans-serif;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 16px 35px;
+  /* background-color: whitesmoke;*/
+    border-radius: 100px;
+}
 
 /* FIM DO HEADER */
 
@@ -77,6 +110,38 @@ header h1 {
     line-height: 2em;   
     margin: 20px auto 0px auto;
     padding: 10px;
+}
+
+#div-learn-more-1 {
+    display: flex;
+    justify-content: center;
+}
+
+#learn-more-1::after {
+    content: '';
+    background-color: hsla(51, 100%, 49%, 0.219);
+    display: block;
+    width: 111%;
+    height: 9px;
+    margin-left: -6px;
+    margin-top: -8px;
+    border-radius: 4px;
+}
+
+#div-learn-more-2 {
+    display: flex;
+    justify-content: center;
+}
+
+#learn-more-2::after {
+    content: '';
+    background-color: hsla(7, 99%, 70%, 0.315);
+    display: block;
+    width: 111%;
+    height: 9px;
+    margin-left: -6px;
+    margin-top: -8px;
+    border-radius: 4px;
 }
 
 .conteudo p {
@@ -188,6 +253,10 @@ header h1 {
     margin-top: 1em;
 }
 
+.profissoes {
+    font-size: 15px;
+}
+
 /*ÁREA IMAGENS*/
 
 #article-4-imagens {
@@ -234,21 +303,20 @@ header h1 {
 #footer {
     background-color: #90D4C6;
     text-align: center;
-    padding: 60px 0px;
+    padding: 80px 0px 100px 0px;
 }
 
-
-#footer img {
-    
+#logo-sunny-footer {
+    width: 170px;
 }
 
 #footer-servicos {
     font-family: 'Barlow', sans-serif;
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 60px;
     color: #519285;
-    margin-top: 20px;
+    margin-top: 40px;
     font-weight: 600;
 }
 
