--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ header {
 }
 
 #icon-burguer {
-    color: white;
-    padding: 33px 21px;
+    margin: 32px 24px;
+    padding: 1px;
+    cursor: pointer;
 }
 
 header h1 {
@@ -54,16 +55,22 @@ header h1 {
 }
 
 #navigation {
+    visibility: hidden;
     background-color: white;
     position: absolute;
     top: 80px;
-    left: 50%;
-    transform: translate(-50%);
+    right: 25px;
 
-    padding: 20px 0px;
-    width: 335px;
-    height: 330px;
+    width: 328px;
+    height: 0;
+    overflow: hidden;
     clip-path: polygon(0 7%, 93% 7%, 100% 0, 100% 100%, 79% 100%, 41% 100%, 0 100%);
+    transition: .6s;
+}
+
+#navigation.abrir {
+    visibility: visible;
+    height: 335px;
 }
 
 #navigation ul {
@@ -74,6 +81,11 @@ header h1 {
     list-style-type: none;
     width: 100%;
     height: 100%;
+    padding: 20px 0;
+}
+
+#navigation ul li {
+    display: block;
 }
 
 
@@ -82,8 +94,10 @@ header h1 {
     font-weight: 600;
     text-decoration: none;
     padding: 16px 35px;
+    color: hsl(232, 10%, 55%);
   /* background-color: whitesmoke;*/
-    border-radius: 100px;
+   /* border-radius: 100px;*/
+    position: relative;
 }
 
 /* FIM DO HEADER */
