--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header h1 {
     top: 80px;
     right: 25px;
 
-    width: 328px;
+    width: 0;
     height: 0;
     overflow: hidden;
     clip-path: polygon(0 7%, 93% 7%, 100% 0, 100% 100%, 79% 100%, 41% 100%, 0 100%);
@@ -71,6 +71,7 @@ header h1 {
 #navigation.abrir {
     visibility: visible;
     height: 335px;
+    width: 335px;
 }
 
 #navigation ul {
@@ -82,12 +83,8 @@ header h1 {
     width: 100%;
     height: 100%;
     padding: 20px 0;
+    
 }
-
-#navigation ul li {
-    display: block;
-}
-
 
 #navigation ul li a {
     font-family:  'Barlow', sans-serif;
@@ -95,9 +92,19 @@ header h1 {
     text-decoration: none;
     padding: 16px 35px;
     color: hsl(232, 10%, 55%);
-  /* background-color: whitesmoke;*/
-   /* border-radius: 100px;*/
+    border-radius: 100px;
     position: relative;
+    transition: .6s ease;
+}
+
+#navigation ul li a:hover {
+    background-color: rgb(245, 245, 12);
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    font-variant-caps: all-petite-caps;
+    font-size: 1.3em;
+    color: hsl(212, 27%, 19%);
+    transition: .6s ease;
 }
 
 /* FIM DO HEADER */
