--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ header h1 {
 
     width: 0;
     height: 0;
-    overflow: hidden;
     clip-path: polygon(0 7%, 93% 7%, 100% 0, 100% 100%, 79% 100%, 41% 100%, 0 100%);
     transition: .6s;
 }
@@ -72,7 +71,7 @@ header h1 {
 #navigation.abrir {
     visibility: visible;
     height: 335px;
-    width: 350px;
+    width: 363px;
 }
 
 #navigation ul {
@@ -87,6 +86,10 @@ header h1 {
     
 }
 
+#navigation ul li {
+    overflow: hidden;
+}
+
 #navigation ul li a {
     font-family:  'Barlow', sans-serif;
     font-weight: 600;
@@ -96,6 +99,7 @@ header h1 {
     border-radius: 100px;
     position: relative;
     transition: .6s ease;
+
 }
 
 #navigation ul li a:hover {
@@ -106,6 +110,7 @@ header h1 {
     font-size: 1.3em;
     color: hsl(212, 27%, 19%);
     transition: .6s ease;
+
 }
 
 /* FIM DO HEADER */
